--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ flutter:
     - assets/music/Legends.mp3
     - assets/music/Misfit.mp3
     - assets/music/Lucid_Dreams.mp3
+    - assets/images/Legends.jpg
+    - assets/images/Misfit.jpg
+    - assets/images/Lucid_Dreams.jpg
   # Optionally add assets (like images) if you have any
   # assets:
   #   - images/a_dot_burr.jpeg
